--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             <div class="ele">
                 <label class="name">Username</label>
                 <input type="text" name="name" id="name" placeholder="Enter Username">
-                <div class="error" id="EroName">Please Fill up valid Username</div>
+                <div class="error" id="EroName">Username is Required</div>
             </div>
 
             <div class="ele">
                 <label class="email">E-mail</label>
                 <input type="text" name="email" id="email" placeholder="Enter Email">
-                <div class="error" id="EroEmail">Please Fill up valid E-mail</div>
+                <div class="error" id="EroEmail">E-mail is Required</div>
+                <div class="error" id="EroEmailVali">Enter a Valid Email</div>
             </div>
 
             <div class="ele">
